--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,10 @@ dependencies:
   video_player: ^1.0.1
   image_picker: 0.6.7
   # webview_flutter: ^0.3.10+4
-  flutter_html: ^1.1.0
+  # flutter_html: ^1.1.0
+  flutter_html: ^1.1.1
+  flutter_fai_webview: ^1.0.0
+  # html: ^0.14.0+4
 
   rxdart: ^0.24.0
 
