--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,9 @@ dependencies:
   # html: ^0.14.0+4
 
   rxdart: ^0.24.0
+  react: ^6.0.0
 
-
+  validators: ^1.0.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
