--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   # flutter_html: ^1.1.0
   flutter_html: ^1.1.1
   flutter_fai_webview: ^1.0.0
+  flutter_widget_from_html: ^0.5.1+5
   # html: ^0.14.0+4
 
   rxdart: ^0.24.0
