--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about Android versioning at https://developer.android.com/studio/publish/versioning
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+# https:://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
@@ -45,7 +45,7 @@ dependencies:
   # flutter_html: ^1.1.0
   flutter_html: ^1.1.1
   flutter_fai_webview: ^1.0.0
-  # flutter_widget_from_html: ^0.5.1+5
+  flutter_widget_from_html: ^0.5.1+5
   # html: ^0.14.0+4
 
   rxdart: ^0.24.0
