--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,16 +47,16 @@ dependencies:
   flutter_fai_webview: ^1.0.0
   flutter_widget_from_html: ^0.5.1+5
   # html: ^0.14.0+4
-
+  flutter_filereader: ^2.2.0
   rxdart: ^0.24.0
   react: ^6.0.0
-
   validators: ^1.0.0+1
-
+  permission_handler: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
   cupertino_icons: ^1.0.0
+  path_provider: ^1.6.27
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +81,7 @@ flutter:
    - images/user.png
    - images/2.0x/user.png
    - images/3.0x/user.png
+   - images/json/tree.json
 
 
   # To add assets to your application, add an assets section, like this:
