--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   permission_handler: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-
+  flutter_datetime_picker: ^1.5.0
   cupertino_icons: ^1.0.0
   path_provider: ^1.6.27
 
