--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_datetime_picker: ^1.5.0
   cupertino_icons: ^1.0.0
   path_provider: ^1.6.27
+  uuid: ^2.2.2
 
 dev_dependencies:
   flutter_test:
