--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   # dio: ^2.1.7
   shared_preferences: ^0.5.3+1
   flutter_inappbrowser: ^1.2.1
+  #provider: ^4.1.0
   provider: ^3.0.0+1
   event_bus: ^1.1.0
   fluttertoast: ^3.1.0
@@ -58,6 +59,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   path_provider: ^1.6.27
   uuid: ^2.2.2
+  flutter_sound: ^2.0.0 
+  path:
 
 dev_dependencies:
   flutter_test:
@@ -85,6 +88,9 @@ flutter:
    - images/user.png
    - images/2.0x/user.png
    - images/3.0x/user.png
+   - images/microphone.png
+   - images/audio.jpg
+   - images/voice.PNG
 
 
   # To add assets to your application, add an assets section, like this:
