--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   # html: ^0.14.0+4
   flutter_filereader: ^2.2.0
   rxdart: ^0.24.0
-  react: ^6.0.0
+  #react: ^6.0.0
   validators: ^1.0.0+1
   permission_handler: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
