--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,12 @@ dependencies:
   path_provider: ^1.6.27
   uuid: ^2.2.2
   flutter_sound: ^2.0.0 
+  
+  image_editor: ^0.1.2
+  isolate: ^2.0.2
+  extended_image_library: ^0.3.0
+  photo_manager: 0.5.7
+  oktoast: ^2.1.4
   path:
 
 dev_dependencies:
