--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   path_provider: ^1.6.27
   uuid: ^2.2.2
   flutter_sound: ^2.0.0 
+  flutter_app_badger: ^1.1.2
   
   image_editor: ^0.1.2
   isolate: ^2.0.2
