--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="weitong"
+        android:label="微通"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
