--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,11 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-<<<<<<< HEAD
-	<string>weitong</string>
-=======
-	<string>demo</string>
->>>>>>> 2cfa626897d7637935f13b884bfa3e96ff5ad5ee
+	<string>微通</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
