--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,12 @@ dependencies:
   uuid: ^2.2.2
   flutter_sound: ^2.0.0 
   flutter_app_badger: ^1.1.2
+
+  # image_gallery_saver: ^1.6.8
+
+  cached_network_image: ^2.0.0
+  flutter_cache_manager: ^2.0.1
+ 
   
 
   
