--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "me.leolin:ShortcutBadger:1.1.22@aar"
     }
 }
 
@@ -24,6 +25,7 @@ subprojects {
 }
 subprojects {
     project.evaluationDependsOn(':app')
+    project.evaluationDependsOn(':ShortcutBadger')
 }
 
 task clean(type: Delete) {
