--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
     package="com.example.weitong">
 
     
@@ -52,5 +53,18 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        
+        <!--文件选择的权限-->
+        <provider
+        android:name="androidx.core.content.FileProvider"
+        android:authorities="${applicationId}.fileProvider"
+        android:exported="false"
+        android:grantUriPermissions="true"
+        tools:replace="android:authorities">
+        <meta-data
+        android:name="android.support.FILE_PROVIDER_PATHS"
+        android:resource="@xml/file_select_flutter"
+        tools:replace="android:resource" />
+        </provider>
     </application>
 </manifest>
