--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,6 +24,7 @@ if (flutterVersionName == null) {
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+// apply plugin: 'java'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
@@ -31,6 +32,7 @@ android {
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+        // main.java.srcDirs += 'src/main/java'
     }
 
     lintOptions {
@@ -64,3 +66,14 @@ flutter {
     source '../..'
 }
 
+// dependencies {
+//     implementation(name: 'ShortcutBadger-1.1.22', ext: 'aar')
+//     implementation 'androidx.appcompat:appcompat:1.0.2'
+//     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+//     implementation 'androidx.core:core:1.2.0'
+//     implementation 'com.google.android.material:material:1.0.0'
+//     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+//     implementation 'com.github.bumptech.glide:glide:4.10.0'
+//     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+//     implementation 'com.google.code.gson:gson:2.7'
+// }
