--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,6 +39,9 @@ android {
 
     defaultConfig {
         multiDexEnabled true
+        // ndk {
+        //     abiFilters "armeabi-v7a"
+        // }
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.weitong"
         // minSdkVersion 16
@@ -47,6 +50,52 @@ android {
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+            // Fix: More than one file was found
+    	packagingOptions {
+        // pickFirst 'lib/x86/libavcodec.so'
+        // pickFirst 'lib/x86/libswscale.so'
+        // pickFirst 'lib/x86_64/libavutil.so'
+        // pickFirst 'lib/x86_64/libavcodec.so'
+        // pickFirst 'lib/x86_64/libswscale.so'
+        // pickFirst 'lib/x86_64/libavformat.so'
+        // pickFirst 'lib/arm64-v8a/libavcodec.so'
+        // pickFirst 'lib/armeabi-v7a/libavutil.so'
+        // pickFirst 'lib/arm64-v8a/libavformat.so'
+        // pickFirst 'lib/x86/libavformat.so'
+        // pickFirst 'lib/armeabi-v7a/libavformat.so'
+        // pickFirst 'lib/armeabi-v7a/libavcodec.so'
+        // pickFirst 'lib/armeabi-v7a/libswscale.so'
+        // pickFirst 'lib/arm64-v8a/libavutil.so'
+        // pickFirst 'lib/arm64-v8a/libswscale.so'
+        pickFirst 'lib/x86/*.so'
+        pickFirst 'lib/x86_64/*.so'
+        pickFirst 'lib/arm64-v8a/*.so'
+        pickFirst 'lib/armeabi-v7a/*.so'
+
+
+
+
+
+
+
+
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    }
     }
 
     buildTypes {
@@ -54,9 +103,12 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
-
+            useProguard true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro' 
         }
     }
+
+
 
 }
 
