--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,21 +27,21 @@ dependencies:
     sdk: flutter
   
   flutter_swiper: ^1.1.6
-  flutter_screenutil: ^0.5.3
+  flutter_screenutil: ^5.0.0
   # dio: ^2.1.7
   shared_preferences: ^0.5.3+1
-  flutter_inappbrowser: ^1.2.1
+  flutter_inappbrowser: ^2.0.2
   #provider: ^4.1.0
-  provider: ^3.0.0+1
-  event_bus: ^1.1.0
-  fluttertoast: ^3.1.0
+  provider: ^5.0.0
+  event_bus: ^2.0.0
+  fluttertoast: ^8.0.5
   dio: ^3.0.10
-  rongcloud_im_plugin: ^4.0.4+3
+  rongcloud_im_plugin: ^5.1.0
   flutter_simple_treeview: ^2.0.2
   rich_edit: ^0.1.1
   chewie: ^0.12.0
   video_player: ^1.0.1
-  image_picker: 0.6.7
+  image_picker: ^0.6.7+22
   # webview_flutter: ^0.3.10+4
   # flutter_html: ^1.1.0
   flutter_html: ^1.1.1
@@ -49,9 +49,9 @@ dependencies:
   flutter_widget_from_html: ^0.5.1+5
   # html: ^0.14.0+4
   flutter_filereader: ^2.2.0
-  rxdart: ^0.24.0
+  rxdart: ^0.25.0
   #react: ^6.0.0
-  validators: ^1.0.0+1
+  validators: ^3.0.0
   permission_handler: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -59,34 +59,35 @@ dependencies:
   cupertino_icons: ^1.0.0
   path_provider: ^1.6.27
   uuid: ^2.2.2
-  flutter_sound: ^2.0.0 
-  flutter_app_badger: ^1.1.2
+  flutter_sound: ^4.0.6 
+  flutter_app_badger: ^1.2.0
 
   # image_gallery_saver: ^1.6.8
 
   cached_network_image: ^2.0.0
   flutter_cache_manager: ^2.0.1
- 
+  # flutter_svg: ^0.19.0
   
 
   
   
-  image_editor: ^0.1.2
+  image_editor: ^1.0.0
   isolate: ^2.0.2
-  extended_image_library: ^0.3.0
-  photo_manager: 0.5.7
-  oktoast: ^2.1.4
+  extended_image_library: ^1.0.1
+  photo_manager: ^1.1.4
+  oktoast: ^3.0.0
   azlistview: ^1.1.1
   github_language_colors:
    git:
       url: git://github.com/Sky24n/github_language_colors.git
 
-  lpinyin: ^1.0.9
+  lpinyin: ^2.0.1
   path:
-  file_picker: 
+  file_picker: ^1.13.3
   open_file:
   flutterfileselector: ^0.0.7
-
+  # flutter_local_notifications: ^0.4.4+2
+  locally: ^0.2.6+9
 dev_dependencies:
   flutter_test:
     sdk: flutter
