--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,6 +49,9 @@ android {
         minSdkVersion 19
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
         versionName flutterVersionName
             // Fix: More than one file was found
     	packagingOptions {
@@ -99,7 +102,16 @@ android {
     }
 
     buildTypes {
+        debug {
+            ndk {
+                //这里要加上，否则debug包会出问题,后面三个为可选，x86建议加上不然部分模拟器回报错
+                abiFilters "armeabi-v7a", "x86"
+            }
+        }
         release {
+             ndk{
+                abiFilters "armeabi-v7a"
+            }
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
