接收消息1. 应用在后台时接收消息通知 2.进入应用后通知清除 3. 点击通知时跳入应用

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
   file_picker: 
   open_file:
   flutterfileselector: ^0.0.7
+  locally: ^0.2.6+9
 
   #不太好用 不能全屏
   # fijkplayer: ^0.8.7
