--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,9 +39,9 @@ android {
 
     defaultConfig {
         multiDexEnabled true
-        // ndk {
-        //     abiFilters "armeabi-v7a"
-        // }
+        ndk {
+            abiFilters "x86","armeabi"
+        }
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.weitong"
         // minSdkVersion 16
@@ -71,26 +71,7 @@ android {
         pickFirst 'lib/x86_64/*.so'
         pickFirst 'lib/arm64-v8a/*.so'
         pickFirst 'lib/armeabi-v7a/*.so'
-
-
-
-
-
-
-
-
-        
-
-
-
-
-
-
-
-
-
-
-
+        pickFirst 'lib/armeabi/*.so'
 
 
 
@@ -99,12 +80,23 @@ android {
     }
 
     buildTypes {
+        debug {
+            ndk{
+                // abiFilters "armeabi","armeabi-v7a","arm64-v8a", "x86"
+                abiFilters "x86","armeabi"
+            }
+        }
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
             useProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro' 
+            ndk {
+                abiFilters "x86","armeabi"
+                // abiFilters "armeabi"
+            }
+            
         }
     }
 
