--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,9 +49,9 @@ android {
         minSdkVersion 19
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
-        ndk {
-            abiFilters "armeabi-v7a", "x86"
-        }
+        // ndk {
+        //     abiFilters "armeabi-v7a", "x86"
+        // }
         versionName flutterVersionName
             // Fix: More than one file was found
     	packagingOptions {
@@ -84,21 +84,15 @@ android {
 
     buildTypes {
         debug {
-<<<<<<< HEAD
             ndk{
                 // abiFilters "armeabi","armeabi-v7a","arm64-v8a", "x86"
                 abiFilters "x86","armeabi"
-=======
-            ndk {
-                //这里要加上，否则debug包会出问题,后面三个为可选，x86建议加上不然部分模拟器回报错
-                abiFilters "armeabi-v7a", "x86"
->>>>>>> 15cad5572fbc3d386bbaddf1cfc73ee22a263b6f
             }
         }
         release {
-             ndk{
-                abiFilters "armeabi-v7a"
-            }
+            //  ndk{
+            //     abiFilters "armeabi-v7a"
+            // }
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
