--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,12 +89,15 @@ dependencies:
   flutterfileselector: ^0.0.7
   url_launcher: ^5.2.7
   locally: ^0.2.6+9
+  #video_player: ^1.0.1
 
   #不太好用 不能全屏
   # fijkplayer: ^0.8.7
   
   #会报错，版本不兼容
   # video_viewer: 
+  #better_player: ^0.0.61
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
