--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@ xmlns:tools="http://schemas.android.com/tools"
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="微通"
+        android:label="亘管"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
